force-app/main/default/objects/Branding__mdt/Branding__mdt.object-meta.xml
<CustomObject>
    <label>Branding</label>
    <pluralLabel>Brandings</pluralLabel>
</CustomObject>