force-app/main/default/objects/Branding__mdt/fields/CmpanyLogoBgColor__c.field-meta.xml
<CustomField>
    <fullName>CmpanyLogoBgColor__c</fullName>
    <label>Cmpany Logo Bg Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>