force-app/main/default/objects/Branding__mdt/fields/FontColor__c.field-meta.xml
<CustomField>
    <fullName>FontColor__c</fullName>
    <label>Font Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>