force-app/main/default/objects/Branding__mdt/fields/FontFamily__c.field-meta.xml
<CustomField>
    <fullName>FontFamily__c</fullName>
    <label>Font Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>