force-app/main/default/objects/Branding__mdt/fields/HeadingFontSize__c.field-meta.xml
<CustomField>
    <fullName>HeadingFontSize__c</fullName>
    <label>Heading Font Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>