force-app/main/default/objects/Branding__mdt/fields/SubHeaderColor__c.field-meta.xml
<CustomField>
    <fullName>SubHeaderColor__c</fullName>
    <label>Sub Header Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>